--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -340,6 +340,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 920px;
   background-image: url("../../assets/images/leav_foto.png");
   background-position: right 645px;
@@ -395,11 +396,31 @@ body {
   line-height: 18px;
   font-weight: 300;
 }
-.testimonials progress {
-  align-self: center;
-  margin-top: 17px;
-  width: 596px;
+.testimonials .progress_wrapper {
+  display: inline-flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-top: 22px;
+  border-radius: 5px;
+  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+}
+.testimonials .progress_wrapper .slider {
+  margin: 0.8px;
+  border-radius: 5px;
+  width: 600px;
+  background: #f5f7f6;
   cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.testimonials .progress_wrapper .slider::-webkit-slider-thumb {
+  border-radius: 5px;
+  width: 115px;
+  height: 6px;
+  background: orange;
+  -webkit-appearance: none;
+          appearance: none;
 }
 .testimonials button {
   bottom: 181px;
