--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -268,6 +268,7 @@ body{
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 920px;
   background-image: url("../../assets/images/leav_foto.png");
   background-position: right 645px;
@@ -305,11 +306,28 @@ body{
       }
     }
   }
-  progress{
-    align-self: center;
-    margin-top: 17px;
-    width: 596px;
-    cursor: pointer;
+  .progress_wrapper{
+    display: inline-flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-top: 22px;
+    border-radius: 5px;
+    background: $Pink_grad;
+    .slider{
+      margin: 0.8px;
+      border-radius: 5px;
+      width: 600px;
+      background: #f5f7f6;
+      cursor: pointer;
+      appearance: none;
+      &::-webkit-slider-thumb{
+        border-radius: 5px;
+        width: 115px;
+        height: 6px;
+        background: orange;
+        appearance: none;
+      }
+    }
   }
   button{
     bottom: 181px;
