--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -69,6 +69,12 @@ body {
   flex-grow: 1;
   margin-left: 21px;
 }
+.header nav .active {
+  color: orange;
+}
+.header nav span {
+  cursor: pointer;
+}
 
 .pet_story {
   position: relative;
@@ -97,6 +103,9 @@ body {
   width: 100%;
   height: 780px;
   background-image: url("../../assets/images/Giant Panda.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .watch-favorite .circle {
   position: absolute;
@@ -217,14 +226,24 @@ body {
 .pets .content .cards-container .card {
   border: 1px solid #FE9013;
   border-radius: 5px;
-  padding: 10px;
 }
-.pets .content .cards-container .card > img {
+.pets .content .cards-container .card .image-container {
+  overflow: hidden;
+  width: 366px;
+  height: 366px;
+}
+.pets .content .cards-container .card .image-container:hover {
+  background-color: black;
+}
+.pets .content .cards-container .card .image-container img {
   transition: all 0.4s linear;
-  width: 346px;
 }
-.pets .content .cards-container .card > img:hover {
+.pets .content .cards-container .card .image-container img:hover {
+  opacity: 0.5;
   transform: scale(1.05);
+}
+.pets .content .cards-container .card .wrapper {
+  transition: transform 0.4s linear;
 }
 .pets .content .cards-container .card .content {
   display: flex;
@@ -233,12 +252,8 @@ body {
   -webkit-animation: menu 0.5s linear forwards;
           animation: menu 0.5s linear forwards;
   transition: all 0.5s linear;
-  margin-top: 7px;
-  visibility: hidden;
+  padding: 2px 14px 10px;
   transform-origin: top center;
-}
-.pets .content .cards-container .card .text {
-  margin-left: 4px;
 }
 .pets .content .cards-container .card .text h5 {
   margin: 4px 0 0;
