--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -42,6 +42,12 @@ body{
     align-items: center;
     flex-grow: 1;
     margin-left: 21px;
+    .active{
+      color: orange;
+    }
+    span{
+      cursor: pointer;
+    }
   }
 }
 .pet_story{
