--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -192,7 +192,7 @@ body {
 }
 .pets button {
   top: 2454px;
-  left: calc(50% - 149px + 0);
+  left: calc(50% - 149px + 0px);
   border-radius: 25px;
 }
 .pets .content {
@@ -271,7 +271,7 @@ body {
 .pick-a-ffriend {
   display: flex;
   opacity: 0.9;
-  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%);
+  background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
 }
 .pick-a-ffriend .content {
   flex-direction: column;
@@ -347,7 +347,7 @@ body {
 }
 .pick-a-ffriend button {
   top: 3397px;
-  left: calc(50% - 149px + 0);
+  left: calc(50% - 149px + 0px);
   border-radius: 25px;
 }
 
@@ -512,7 +512,7 @@ footer .wrapper .to_donate {
   position: static;
   margin-top: 33px;
   grid-column: 1/4;
-  left: calc(50% - 149px + 0);
+  left: calc(50% - 149px + 0px);
   border-radius: 5px;
 }
 footer .wrapper .media {
@@ -556,8 +556,7 @@ footer .wrapper .author {
   line-height: 21px;
   font-weight: 100;
 }
-
-ul {
+footer ul {
   list-style: none;
   padding-inline: 0px;
 }
