--- a/pages/donate/style.scss
+++ b/pages/donate/style.scss
@@ -71,9 +71,6 @@ body{
   }
 }
 .back-image{
-  // position: relative;
-  // z-index: 0;
-  // top: -80px;
   width: 100%;
   height: 390px;
   background-image: url("../../assets/images/Giant Panda.png");
@@ -82,15 +79,12 @@ body{
   background-repeat: no-repeat;
 }
 .pick-a-feed{
-  padding: 0 220px;
+  padding: 2px 220px 178px;
   background: $Orange_grad;
   .content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     h3{
       align-self: flex-start;
-      margin-top: 30px;
+      margin-top: 45px;
       color: #FE9013;
       @include h3;
     }
@@ -109,11 +103,10 @@ body{
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 24px;
+      margin-top: 59px;
       border-radius: 20px;
-      width: 84%;
+      padding: 0 92px 45px;
       background: rgba(187, 167, 167, 0.52);
-      padding-inline: 93px;
       backdrop-filter: blur(2px);
       @include subtitle;
       h2{
@@ -124,17 +117,17 @@ body{
         align-self: flex-start;
         margin-top: -19px;
       }
-      &>p:last-child{
-        @include body;
-        align-self: center;
-      }
       .image-box{
         display: flex;
         align-items: center;
+        margin-top: 35px;
+        margin-left: -18px;
+        gap: 12px;
         .number{
           display: flex;
           flex-direction: column;
-          align-items: center;
+          margin-top: 56px;
+          gap: 9px;
           @include body;
           &>div:first-child{
             font-size: 72px;
@@ -144,17 +137,26 @@ body{
             text-align: center;
           }
         }
+        .number+img{
+          margin-top: 30px;
+        }
+        img:last-child{
+          padding-left: 55px;
+        }
       }
       .progress{
         width: 100%;
+        &>*:first-child{
+          @include body;
+        }
         .bar{
           position: relative;
           display: flex;
-          justify-content: space-between;
           align-items: center;
           height: 27px;
-          padding: 0px 26px;
+          padding: 0px 9px;
           background: #404950;
+          gap: 90px;
           &::before{
             content: "";
             position: absolute;
@@ -163,40 +165,107 @@ body{
             width: 94%;
             height: 2px;
             background: #72828E;
+            margin-inline: 18px;
           }
-          &>span{
+          &>span, label{
             position: relative;
-            z-index: 1;
             display: inline-flex;
+            justify-content: center;
             align-items: center;
+            width: 40px;
+            height: 20px;
+            cursor: pointer;
+            input{
+              display: none;
+              &:checked{
+                +.amount{
+                  color: #FE9013;
+                }
+                ~img{
+                  border: 2px solid #FE9013;
+                  border-radius: 50%;
+                  padding: 4px;
+                  outline: 2px solid #FE9013;
+                  outline-offset: 7px;
+                }
+              }
+            }
             .amount{
               position: absolute;
-              top: 27px;
-              left: -21px;
-            }
-            .roller{
-              position: absolute;
-              left: -15px;
+              top: 40px;
+              left: -8px;
             }
           }
         }
       }
       form{
         display: flex;
+        flex-direction: column;
         flex-wrap: wrap;
-        justify-content: space-around;
-        margin-top: 30px;
-        width: 268px;
-        input:first-child{
-          width: 100%;
+        align-items: center;
+        margin-top: 67px;
+        width: 100%;
+        .amount-input{
+          position: relative;
+          span{
+            position: absolute;
+            bottom: 23px;
+            right: 18px;
+            width: 10px;
+            height: 20px;
+            color: #929699;
+          }
+        }
+        input[type="number"]{
+          margin-top: 98px;
+          border-radius: 2px;
+          width: 260px;
+          height: 52px;
+          padding-left: 9px;
+          @include body;
         }
         input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
           margin: 0;
           appearance: none;
         }
+        .radio{
+          display: inline-grid;
+          margin-top: 22px;
+          width: 260px;
+          column-gap: 25px;
+          grid-template-columns: 50% 50%;
+          @include body;
+          label{
+            position: relative;
+            input{
+              opacity: 0;
+            }
+            input:checked+span{
+              background: orange;
+            }
+            span{
+              position: absolute;
+              top: 6px;
+              left: 7px;
+              border-radius: 50%;
+              width: 9px;
+              height: 9px;
+              outline: 2px solid orange;
+              outline-offset: 2px;
+              }
+          }
+          & label:first-child{
+            margin-left: 20px;
+          }
+        }
+      }
+      &>p:last-child{
+        align-self: center;
+        margin-top: 114px;
+        @include body;
       }
       button{
-        position: static;
+        bottom: 113px;
         @include round_btn;
       }
     }
@@ -255,6 +324,9 @@ footer{
       &>*{
         margin: 8px 0;
       }
+      li:hover{
+        transform: translate(5px);
+      }
     }
     .media_elem{
       display: inline-flex;
@@ -280,6 +352,9 @@ footer{
       }
       li{
         cursor: pointer;
+        &:hover{
+          color: orange;
+        }
       }
     }
     .author{
