--- a/pages/donate/style.scss
+++ b/pages/donate/style.scss
@@ -1,18 +1,18 @@
-@import '../../assets/styles/colors.scss';
-@import '../../assets/styles/backgrounds.scss';
-@import '../../assets/styles/buttons.scss';
-@import '../../assets/styles/fonts.scss';
-@import '../../assets//styles/testimonial.scss';
+@import "../../assets/styles/colors.scss";
+@import "../../assets/styles/backgrounds.scss";
+@import "../../assets/styles/buttons.scss";
+@import "../../assets/styles/fonts.scss";
+@import "../../assets//styles/testimonial.scss";
 
-body{
+body {
   margin: 0px;
   box-sizing: border-box;
-  width: 1600px;
+  // width: 1600px;
   font-family: "Roboto";
   text-align: left;
   letter-spacing: 0em;
 }
-.header{
+.header {
   position: relative;
   z-index: 1;
   display: flex;
@@ -20,9 +20,9 @@ body{
   height: 80px;
   background: #000;
   text-align: center;
-  color: #FFFF;
+  color: #ffff;
   backdrop-filter: blur(2px);
-  .wrapper_header{
+  .wrapper_header {
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
@@ -30,47 +30,47 @@ body{
     width: 80%;
     padding-inline: 220px;
   }
-  a{
+  a {
     text-decoration: none;
     color: inherit;
   }
-  span{
+  span {
     width: 105px;
     @include btn;
   }
-  nav{
+  nav {
     display: inline-flex;
     align-items: center;
     flex-grow: 1;
     margin-left: 21px;
-    .active{
+    .active {
       color: orange;
     }
-    span{
+    span {
       cursor: pointer;
     }
   }
 }
-.pet_story{
+.pet_story {
   position: relative;
   display: flex;
   align-items: center;
   border: 1px solid;
   width: 80px;
   height: 50px;
-  img{
+  img {
     position: absolute;
     top: 25px;
     left: 11px;
   }
-  &>*{
+  & > * {
     font-size: 19px;
     line-height: 23px;
     font-weight: 400;
     text-align: center;
   }
 }
-.back-image{
+.back-image {
   width: 100%;
   height: 390px;
   background-image: url("../../assets/images/Giant Panda.png");
@@ -78,28 +78,28 @@ body{
   background-size: cover;
   background-repeat: no-repeat;
 }
-.pick-a-feed{
+.pick-a-feed {
   padding: 2px 220px 178px;
   background: $Orange_grad;
-  .content{
-    h3{
+  .content {
+    h3 {
       align-self: flex-start;
       margin-top: 45px;
-      color: #FE9013;
+      color: #fe9013;
       @include h3;
     }
-    .text{
+    .text {
       color: #ffff;
       @include btn;
-      h3{
+      h3 {
         margin: 36px 0 0;
         @include h3;
       }
-      p{
+      p {
         margin-top: 10px;
       }
     }
-    .inside-window{
+    .inside-window {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -109,27 +109,27 @@ body{
       background: rgba(187, 167, 167, 0.52);
       backdrop-filter: blur(2px);
       @include subtitle;
-      h2{
-        color: #FE9013;
+      h2 {
+        color: #fe9013;
         @include h2;
       }
-      p{
+      p {
         align-self: flex-start;
         margin-top: -19px;
       }
-      .image-box{
+      .image-box {
         display: flex;
         align-items: center;
         margin-top: 35px;
         margin-left: -18px;
         gap: 12px;
-        .number{
+        .number {
           display: flex;
           flex-direction: column;
           margin-top: 56px;
           gap: 9px;
           @include body;
-          &>div:first-child{
+          & > div:first-child {
             font-size: 72px;
             line-height: 58px;
             font-family: Roboto;
@@ -137,19 +137,19 @@ body{
             text-align: center;
           }
         }
-        .number+img{
+        .number + img {
           margin-top: 30px;
         }
-        img:last-child{
+        img:last-child {
           padding-left: 55px;
         }
       }
-      .progress{
+      .progress {
         width: 100%;
-        &>*:first-child{
+        & > *:first-child {
           @include body;
         }
-        .bar{
+        .bar {
           position: relative;
           display: flex;
           align-items: center;
@@ -157,17 +157,18 @@ body{
           padding: 0px 9px;
           background: #404950;
           gap: 90px;
-          &::before{
+          &::before {
             content: "";
             position: absolute;
             z-index: 0;
             top: 13px;
             width: 94%;
             height: 2px;
-            background: #72828E;
+            background: #72828e;
             margin-inline: 18px;
           }
-          &>span, label{
+          & > span,
+          label {
             position: relative;
             display: inline-flex;
             justify-content: center;
@@ -175,22 +176,22 @@ body{
             width: 40px;
             height: 20px;
             cursor: pointer;
-            input{
+            input {
               display: none;
-              &:checked{
-                +.amount{
-                  color: #FE9013;
+              &:checked {
+                + .amount {
+                  color: #fe9013;
                 }
-                ~img{
-                  border: 2px solid #FE9013;
+                ~ img {
+                  border: 2px solid #fe9013;
                   border-radius: 50%;
                   padding: 4px;
-                  outline: 2px solid #FE9013;
+                  outline: 2px solid #fe9013;
                   outline-offset: 7px;
                 }
               }
             }
-            .amount{
+            .amount {
               position: absolute;
               top: 40px;
               left: -8px;
@@ -198,16 +199,16 @@ body{
           }
         }
       }
-      form{
+      form {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         align-items: center;
         margin-top: 67px;
         width: 100%;
-        .amount-input{
+        .amount-input {
           position: relative;
-          span{
+          span {
             position: absolute;
             bottom: 23px;
             right: 18px;
@@ -216,7 +217,7 @@ body{
             color: #929699;
           }
         }
-        input[type="number"]{
+        input[type="number"] {
           margin-top: 98px;
           border-radius: 2px;
           width: 260px;
@@ -224,26 +225,27 @@ body{
           padding-left: 9px;
           @include body;
         }
-        input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
           margin: 0;
           appearance: none;
         }
-        .radio{
+        .radio {
           display: inline-grid;
           margin-top: 22px;
           width: 260px;
           column-gap: 25px;
           grid-template-columns: 50% 50%;
           @include body;
-          label{
+          label {
             position: relative;
-            input{
+            input {
               opacity: 0;
             }
-            input:checked+span{
+            input:checked + span {
               background: orange;
             }
-            span{
+            span {
               position: absolute;
               top: 6px;
               left: 7px;
@@ -252,87 +254,87 @@ body{
               height: 9px;
               outline: 2px solid orange;
               outline-offset: 2px;
-              }
+            }
           }
-          & label:first-child{
+          & label:first-child {
             margin-left: 20px;
           }
         }
       }
-      &>p:last-child{
+      & > p:last-child {
         align-self: center;
         margin-top: 114px;
         @include body;
       }
-      button{
+      button {
         bottom: 113px;
         @include round_btn;
       }
     }
   }
 }
-footer{
+footer {
   background: #000;
   color: #ffffff;
   @include body;
-  a{
+  a {
     text-decoration: none;
     color: inherit;
   }
-  .wrapper{
+  .wrapper {
     display: grid;
     margin: 0 auto;
     padding: 40px 220px;
     grid-template-columns: 310px 480px auto;
-    form{
+    form {
       display: flex;
       flex-flow: row wrap;
       margin-top: 4px;
       grid-column: 3 / 4;
       row-gap: 8px;
       column-gap: 2px;
-      label{
+      label {
         width: 100%;
         @include subtitle;
       }
-      input{
+      input {
         border-radius: 2px;
         width: 228px;
         height: 42px;
         background: inherit;
         color: inherit;
-        border-color: #F9804B;
+        border-color: #f9804b;
         border-style: solid;
         @include body;
-        &:focus-visible{
+        &:focus-visible {
           border-color: $Green;
           outline: none;
         }
       }
-      button{
+      button {
         @include submit_btn;
       }
     }
-    .to_donate{
+    .to_donate {
       position: static;
       margin-top: 33px;
       grid-column: 1 /4;
       @include rect_btn;
     }
-    .media{
+    .media {
       margin-top: 41px;
-      &>*{
+      & > * {
         margin: 8px 0;
       }
-      li:hover{
+      li:hover {
         transform: translate(5px);
       }
     }
-    .media_elem{
+    .media_elem {
       display: inline-flex;
       align-items: center;
       gap: 10px;
-      .wrapper_media{
+      .wrapper_media {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -342,22 +344,22 @@ footer{
         background: #c4c4c4;
       }
     }
-    nav{
+    nav {
       align-self: end;
-      ul{
+      ul {
         display: inline-flex;
         margin-bottom: 23px;
         margin-left: 89px;
         gap: 58px;
       }
-      li{
+      li {
         cursor: pointer;
-        &:hover{
+        &:hover {
           color: orange;
         }
       }
     }
-    .author{
+    .author {
       align-self: end;
       margin-bottom: 3px;
       margin-left: 10px;
@@ -367,7 +369,7 @@ footer{
       font-weight: 100;
     }
   }
-  ul{
+  ul {
     list-style: none;
     padding-inline: 0px;
   }
