--- a/assets/styles/buttons.css
+++ b/assets/styles/buttons.css
@@ -1,1 +1,25 @@
-/*# sourceMappingURL=buttons.css.map */
+.btn_1 {
+  position: absolute;
+  border: none;
+  width: 298px;
+  height: 54px;
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 22px;
+  font-family: "Roboto";
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0em;
+  color: white;
+}
+.btn_1:hover {
+  background: #e47209;
+}
+.btn_1:active {
+  background: #4B9200;
+}
+.btn_1:disabled {
+  background: #767474;
+}/*# sourceMappingURL=buttons.css.map */
