--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -1,4 +1,5 @@
-@import './backgrounds.scss';
+@import "./backgrounds.scss";
+@import "./colors.scss";
 
 .btn_1 {
   position: absolute;
@@ -9,29 +10,29 @@
   cursor: pointer;
   font-size: 16px;
   line-height: 22px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0em;
   color: #ffff;
-  &:hover{
-    background: #E47209;
+  &:hover {
+    background: #e47209;
   }
-  &:active{
+  &:active {
     background: $Green;
   }
-  &:disabled{
+  &:disabled {
     background: $Gray;
   }
 }
-@mixin round_btn($Left: 0px){
-  left: calc(50% - 298px/2 + $Left);
+@mixin round_btn($Left: 0px) {
+  left: calc(50% - 298px / 2 + $Left);
   border-radius: 25px;
   @extend .btn_1;
 }
-@mixin rect_btn($Left: 0px){
-  left: calc(50% - 298px/2 + $Left);
+@mixin rect_btn($Left: 0px) {
+  left: calc(50% - 298px / 2 + $Left);
   border-radius: 5px;
   @extend .btn_1;
 }
@@ -45,12 +46,12 @@
   background: $Orange;
   cursor: pointer;
   color: #ffffff;
-  &:hover{
+  &:hover {
     background: $Green;
   }
 }
-@mixin submit_btn{
-  border: 1px solid #D31414;
+@mixin submit_btn {
+  border: 1px solid #d31414;
   border-radius: 5px;
   width: 129px;
   height: 42px;
@@ -59,9 +60,9 @@
   font-size: 16px;
   line-height: 22px;
   font-family: Roboto;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 400;
   text-align: center;
   letter-spacing: 0em;
-  color: #D31414;
+  color: #d31414;
 }
