--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -3,6 +3,12 @@
 @import "../../assets/styles/buttons.scss";
 @import "../../assets/styles/fonts.scss";
 @import "../../assets//styles/testimonial.scss";
+
+@media screen and (min-width: 1001px) {
+  body {
+    min-width: 1600px;
+  }
+}
 body {
   margin: 0px;
   box-sizing: border-box;
@@ -98,9 +104,9 @@ body {
     &:before {
       content: "";
       position: absolute;
+      z-index: -1;
       top: -75px;
       left: -75px;
-      z-index: -1;
       border-radius: 50%;
       width: 465px;
       height: 465px;
@@ -121,8 +127,8 @@ body {
   background-image: url("../../assets/images/flower_foto.png");
   background-position: right -29px;
   background-repeat: no-repeat;
-  grid: auto auto;
-  grid-column: auto auto;
+  // grid: auto auto;
+  // grid-column: auto auto;
   gap: 85px;
   img {
     width: 609px;
@@ -148,14 +154,18 @@ body {
   }
 }
 .pets {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 80px;
   height: 1103px;
   background-image: url("../../assets/images/palm_foto.png"),
     url("../../assets/images/strelitzia\ 1.png");
   background-position: left bottom, right bottom;
   background-repeat: no-repeat;
+  gap: 82px;
   button {
-    top: 2454px;
+    position: static;
     @include round_btn;
   }
   .content {
@@ -184,6 +194,7 @@ body {
           }
           img {
             transition: all 0.4s linear;
+            width: 100%;
             &:hover {
               opacity: 0.5;
               transform: scale(1.05);
@@ -217,16 +228,16 @@ body {
   }
 }
 .pick-a-ffriend {
-  display: flex;
   opacity: 0.9;
+  padding: 71px 220px 100px;
   background: $Orange_grad;
   .content {
+    display: flex;
     flex-direction: column;
+    align-items: center;
     opacity: 1;
-    margin: 69px auto 100px;
     border-radius: 20px;
-    width: 1160px;
-    height: 835px;
+    padding-bottom: 58px;
     background: $Frosted_glass-white;
     h2 {
       text-align: center;
@@ -234,12 +245,13 @@ body {
       @include h2;
     }
     h3 {
-      margin: 58px 0 23px;
+      margin: 42px 0 23px;
       text-align: center;
       @include h3;
     }
     .text {
-      margin-left: 97px;
+      // margin-left: 97px;
+      margin-left: 42px;
       h4 {
         margin: -7px 0 39px;
         @include subtitle;
@@ -280,7 +292,8 @@ body {
     }
   }
   button {
-    top: 3397px;
+    position: static;
+    margin-top: 120px;
     @include round_btn;
   }
 }
@@ -329,7 +342,6 @@ body {
   .progress_wrapper {
     display: inline-flex;
     align-items: center;
-    margin-top: 10px;
     margin-top: 22px;
     border-radius: 5px;
     background: $Pink_grad;
@@ -447,7 +459,7 @@ footer {
       margin-left: 10px;
       margin-left: 140px;
       font-size: 16px;
-      line-height: 21px;
+      line-height: 20px;
       font-weight: 100;
     }
   }
