--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -119,7 +119,6 @@ body {
   height: 400px;
   font-size: 107px;
   line-height: 80px;
-  font-family: "Roboto";
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
@@ -149,8 +148,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -42px;
-  height: 605px;
+  margin-top: 38px;
+  margin-bottom: 158px;
   background-image: url("../../assets/images/flower_foto.png");
   background-position: right -29px;
   background-repeat: no-repeat;
@@ -306,7 +305,7 @@ body {
   font-weight: 400;
 }
 .pick-a-ffriend .content .text {
-  margin-left: 42px;
+  padding: 0 30px 0 70px;
 }
 .pick-a-ffriend .content .text h4 {
   margin: -7px 0 39px;
@@ -321,7 +320,7 @@ body {
 }
 .pick-a-ffriend .content .text p {
   margin-top: -18px;
-  width: 862px;
+  width: 84%;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
